Fixed some layout issues and added user_id to the posts.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11270,11 +11270,12 @@ body {
 }
 
 #cke_1_contents {
-  height: 30px !important;
+  height: 55px !important;
 }
 
 .btn {
   background: #fff;
+  color: #424242;
   border-radius: 15px;
   font-size: 1.5rem;
 }
