--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -123,11 +123,12 @@ html, body {
 }
 
 #cke_1_contents{
-    height: 30px !important;
+    height: 55px !important;
 }
 
 .btn {
     background: #fff;
+    color: #424242;
     border-radius: 15px;
     font-size: 1.5rem;
 }
